# Zappy

./: Makefile  README.md
ai/: Makefile  README.md
ai/asset/: broadcast.json
ai/src/: main
ai/src/algorithm/: Ai.py
ai/src/broadcast/: broadcast.py
ai/src/client/: Client.py  Commands.py
ai/src/utils/: Arguments.py
docs/: README.md  Relations.md  Renders.md  Trantor.md
gui/: .clang-tidy  CMakeLists.txt  README.md  compile.sh
gui/.cache/clangd/index/: AParticle.cpp.36C1F049B59E8DCB.idx  AParticle.hh.3F91605FB85B8435.idx  AScene.hh.4C715301CEAE5C15.idx  Camera.cpp.FD380BF265D30145.idx  Camera.hh.CCBD046947A7D0C2.idx  DisconnectPanel.cpp.0CCB06EEF9F46FC0.idx  DisconnectPanel.hh.DB83BE3B847A9C5F.idx  EggManager.cpp.013308B0154D84B8.idx  EggManager.hh.289B2AFCCE080671.idx  FogParticle.cpp.88ADED33E90724DA.idx  FogParticle.hh.66ED03493C35AD05.idx  FrequencyPanel.cpp.F64EDAD6CC968B02.idx  FrequencyPanel.hh.7EFA812971830C54.idx  GUI.cpp.095DAA7C95691972.idx  GUI.hh.8DD002111A72A49B.idx  Game.cpp.E0D16659CD40B53B.idx  Game.hh.878A9CF74DA860D8.idx  GuiClient.cpp.9092C72A36C137BA.idx  GuiClient.hpp.D46085CC37398DDA.idx  GuiCommand.hh.7057B92FCFE9AA63.idx  HUD.cpp.E4864F07B8A5CA35.idx  HUD.hh.265AED73B46B4FE7.idx  IScene.hh.BBD507A242E07D3B.idx  Inventory.hh.08D6AD31486B3628.idx  Map.cpp.FB8DD77D9FB4DA1A.idx  Map.hh.2EB4377BF6AC8A06.idx  MusicManager.cpp.6725767D15FA0ECE.idx  MusicManager.hh.02997C7F6DF93E91.idx  ParticleEngine.cpp.6B4B814C2A7E29ED.idx  ParticleEngine.hh.9E7063CEA57EA234.idx  Player.cpp.CD009F62661168B0.idx  Player.hh.5B444BDEAF76F112.idx  PlayerManager.cpp.B0C55F1CDC34535F.idx  PlayerManager.hh.16909686156FE5B7.idx  RainParticle.cpp.ED88ABC4D68E4D0F.idx  RainParticle.hh.3C0210AEB4FC08DF.idx  RingBuffer.cpp.86637D13542279E6.idx  RingBuffer.hh.DE99650E36BD3F60.idx  SceneManager.cpp.EEB28DE31FC3F7CB.idx  SceneManager.hh.60AFF59FDD863373.idx  (+14 more)
gui/include/: Inventory.hh
gui/include/zappy/: Camera.hh  RingBuffer.hh  ZappyError.hh  gui.hh
gui/include/zappy/DisconnectPanel/: DisconnectPanel.hh
gui/include/zappy/Egg/: EggManager.hh
gui/include/zappy/GUI/: GUI.hh
gui/include/zappy/GuiClient/: GuiClient.hpp
gui/include/zappy/GuiCommand/: GuiCommand.hh
gui/include/zappy/HUD/: FrequencyPanel.hh  HUD.hh  SelectionPanel.hh  TextButton.hh
gui/include/zappy/Map/: Map.hh  Tile.hh
gui/include/zappy/MusicManager/: MusicManager.hh
gui/include/zappy/ParticleEngine/: AParticle.hh  FogParticle.hh  ParticleEngine.hh  RainParticle.hh
gui/include/zappy/Player/: Player.hh  PlayerManager.hh
gui/include/zappy/Scenes/: AScene.hh  Game.hh  IScene.hh  SceneManager.hh  Victory.hh
gui/include/zappy/Weather/: WeatherManager.hh
gui/src/: Camera.cpp  RingBuffer.cpp  launch.cpp  main.cpp  zappyError.cpp
gui/src/DisconnectPanel/: DisconnectPanel.cpp
gui/src/Egg/: EggManager.cpp
gui/src/GUI/: GUI.cpp
gui/src/GuiClient/: GuiClient.cpp
gui/src/GuiCommand/: GuiCommand.cpp
gui/src/HUD/: FrequencyPanel.cpp  HUD.cpp  SelectionPanel.cpp  TextButton.cpp
gui/src/Map/: Map.cpp
gui/src/MusicManager/: MusicManager.cpp
gui/src/ParticleEngine/: AParticle.cpp  FogParticle.cpp  ParticleEngine.cpp  RainParticle.cpp
gui/src/Player/: Player.cpp  PlayerManager.cpp
gui/src/Scenes/: Game.cpp  SceneManager.cpp  Victory.cpp
gui/src/Weather/: WeatherManager.cpp
gui/tests/: CMakeLists.txt
gui/tests/src/: main.cpp
server/: .clang-format  .clang-tidy  Makefile  README.md
server/include/zappy/: server.h
server/include/zappy/config/: arguments.h  config.h  config_file.h
server/include/zappy/server/: client.h  destroy.h  infos.h  log.h  map_utils.h  utils.h
server/include/zappy/server/clock/: infos.h  utils.h
server/include/zappy/server/summon/: infos.h  utils.h
server/src/: launch.c  main.c
server/src/destroy/: destroy_arguments.c  destroy_clients.c  destroy_server.c  destroy_teams.c
server/src/load/: create_server.c  parse_args.c  update_server_with_args.c
server/src/load/options/: c_handler.c  f_handler.c  h_handler.c  n_handler.c  p_handler.c  x_handler.c  y_handler.c
server/src/map/: add_egg_to_tile.c  change_player_pos.c  delete_eggs_from_tile.c  from_egg_to_player_tile.c  generate_map.c  update_map.c  utils_map.c
server/src/server/: check_game_status.c  handle_signal.c  server_loop.c
server/src/server/client/: add_client_node.c  add_client_to_team.c  connect_new_client.c  delete_client_from_team.c  destroy_client.c  find_client.c  find_team.c  kill_player.c  starve_players.c
server/src/server/clock/: add_ticks_occupied.c  gettickselapsed.c  update_ticks.c
server/src/server/eggs/: add_egg_to_team.c  create_eggs.c  delete_egg_from_team.c  find_egg_by_nb.c  from_egg_to_player.c
server/src/server/summons/: add_summon.c  get_summon.c  handle_summon.c  pop_summon.c
server/src/server/summons/command_ai/: broadcast_func.c  check_incantation_end.c  connect_nbr_func.c  dprint_tile.c  eject_func.c  fork_func.c  forward_func.c  incantation_func.c  inventory_func.c  left_func.c  look_func.c  right_func.c  set_func.c  take_func.c  utils_summons.c
server/src/server/summons/command_gui/: bct_func.c  gui_connect_func.c  mct_func.c  msz_func.c  pin_func.c  plv_func.c  ppo_func.c  sgt_func.c  sst_func.c  tna_func.c
server/src/utils/: array_len.c  char_in_str.c  delete_from_array.c  free_array.c  generate_uuid.c  print_help.c  realloc_array.c  set_error.c  str_to_word_array.c  strisnum.c  strndup_quotes.c
server/tests/: redirect.c  template.c  tests_launch.c  tests_utils.c
server/tests/load/: test_arguments_ptr.c  tests_arguments.c  tests_create_server.c
server/tests/server/: create_server.c  tests_clients.c  tests_clock.c  tests_eggs.c  tests_map.c  tests_misc.c  tests_summons_ai.c  tests_summons_gui.c
(+2 files in other folders)
